Update game title and credits
- Changed title to 'MISSILE COMMAND NEON' for clarity
- Updated credits to reflect actual developer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Start screen overlay -->
         <div id="startScreen" class="screen-overlay">
             <div class="screen-content">
-                <h1 class="game-title">NEON COMMAND</h1>
+                <h1 class="game-title">MISSILE COMMAND NEON</h1>
                 <p class="subtitle">DEFEND YOUR CITIES</p>
                 <button class="neon-button" id="startButton">START GAME</button>
                 <button class="neon-button" id="highScoresButton">HIGH SCORES</button>
@@ -24,7 +24,7 @@
                     <p>1-2-3: Select Base</p>
                     <p>SPACE: Pause</p>
                 </div>
-                <div class="credits">© 2025 RETRO ARCADE</div>
+                <div class="credits"> 2025 Felix Schmidt</div>
             </div>
         </div>
         
